<resources>
    <string name="app_name">LabMedix</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="todo">to do</string>
    <string name="labmedix">LABMEDIX</string>
    <string name="l_a_b_o_r_a_t_o_r_y">L a b o r a t o r y</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="the_application_works_to_connect_laboratories_with_people">The application works to connect laboratories with people</string>
    <string name="welcome_to_labmedix_laboratories">Welcome to labmedix laboratories!</string>
    <string name="high_quality_laboratories">High quality laboratories</string>
    <string name="modern_medical_devices_are_used_and_high_level_specialists">Modern medical devices are used And high level specialists</string>
    <string name="you_can_request_a_home_visit">You can request a home visit</string>
    <string name="a_home_visit_is_available_to_facilitate_procedure_of_medical_tests">A home visit is available to facilitate Procedure of medical tests</string>
    <string name="_0599_xxx_xxx">0599_XXX_XXX</string>
    <string name="user">User</string>
    <string name="laboratory">Laboratory</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="please_choose_how_you_want_to_login">Please choose how you want to login</string>
    <string name="to_create_an_account_or_sign_in">To create an account or sign in</string>
    <string name="we_ve_sent_a_code_to">We\'ve sent a code to</string>
    <string name="_9705991234567">+9705991234567</string>
    <string name="_50_seconds">in 50 secounds</string>
    <string name="resend_code_in">Resend code</string>
    <string name="edit">Edit</string>
    <string name="user_informations">User Informations</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="email">Email</string>
    <string name="aha123_example_com">aha123@example.com</string>
    <string name="laboratory_information">Laboratory Information</string>
    <string name="laboratory_name">Laboratory name</string>
    <string name="enter_laboratory_name">Enter laboratory name</string>
    <string name="license_number">License number</string>
    <string name="enter_number">Enter number</string>
    <string name="required">This field required</string>
    <string name="action_chats">Chat</string>
    <string name="action_reports">Results</string>
    <string name="action_home">Home</string>
    <string name="action_account">Profile</string>
    <string name="test_conditions">Test conditions</string>
    <string name="labrotories">Labrotories</string>
    <string name="health_tips">Health tips</string>
    <string name="welcome">Welcome,</string>
    <string name="ahmed_quader">Ahmed Quader</string>
    <string name="see_all">See All</string>
    <string name="checkup_panel">Cheackup Panel</string>
    <string name="_27_avalible_tests">27 Available Tests</string>
    <string name="tests_panel">Tests Panel</string>
    <string name="my_results">My Results</string>
    <string name="my">My results</string>
    <string name="no_results_at_the_moment">No results at the moment</string>
    <string name="chats">Chats</string>
    <string name="no_chats_at_the_moment">No chats at the moment</string>
    <string name="profile">Profile</string>
    <string name="invalid_phone_number">Invalid Phone Number</string>
    <string name="phone">phone number</string>
    <string name="code">Enter Code</string>
    <string name="start">Start</string>
    <string name="verify">Verify</string>
    <string name="resend">Resend</string>
    <string name="sign_in">Sign In</string>
    <string name="signed_out">Sign Out</string>
    <string name="invalid_code">Invalid Code</string>
    <string name="code_sent">Code send</string>
    <string name="verification_failed">Verification Failed</string>
    <string name="verification_succeeded">Verification Succeeded</string>
    <string name="signed_in_failed">Signed In Failed</string>
    <string name="quota_exceeded">Quato Exceeded</string>
    <string name="instant_validation">Instant Validation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_visit">Home Visit</string>
    <string name="title_activity_first_main">FirstMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maps">Map</string>
    <string name="h_visit">Home Visit</string>
    <string name="title_activity_maps_labrotory">Map</string>
    <string name="title_location_permission">Access Location Permission :</string>
    <string name="text_location_permission">You must allow this app to access current location, please check location permission?</string>
    <string name="ok">ok</string>
    <string name="select_time_of_home_visit">Select time of home visit</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="_12_15_12_30">12:15 - 12:30</string>
    <string name="non_named_road">Non Named Road</string>
    <string name="phon_no">Phone Number</string>
    <string name="tests_condition">Test Conditions</string>
    <string name="complet_blood">Complete Blood Count (CBC)</string>
    <string name="overview">Overview</string>
    <string name="reminder_list">Reminder list</string>
    <string name="reminder">Reminder</string>
    <string name="set_reminder">Set a reminder now</string>
    <string name="terms"><![CDATA[Terms & Condition]]></string>
    <string name="remind_me">Remind me to</string>
    <string name="edit_profile">Edit profile</string>
    <string name="mobile_no">Mobile number</string>
    <string name="gender">Gender</string>
    <string name="date_off_birth">Date of birth</string>
    <string name="privacy">Privacy Policy</string>
    <string name="my_home_visit">My home visit</string>
    <string name="active">Active</string>
    <string name="enter_your_new_email">Enter your new email</string>
    <string name="select_your_date_of_birth">Select your date of birth</string>
    <string name="am">12 : 00 PM</string>
    <string name="day">Today</string>
    <string name="cancel">Cancel</string>
    <string name="completed">Completed</string>

</resources>
