<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/remin"
    tools:context=".activities.ReminderActivity">




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminder_list"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="18dp"
        android:textColor="@color/colorRegular"
        android:layout_gravity="top|center"
        android:gravity="center"
        />

    <ImageView
        android:id="@+id/image_view_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:onClick="back"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_back_arrow" />


    <ImageView
        android:id="@+id/image_view_add_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="100dp"
        android:src="@drawable/reminder_photo" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/reminder"
            android:textColor="@color/colorRegular"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/set_reminder"
            android:textColor="@color/colorRegular"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/floating_add"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="10dp"
        android:onClick="add"
        android:layout_marginEnd="10dp"

        />



</FrameLayout>